Исправленная индексация